--- a/index.Rmd
+++ b/index.Rmd
@@ -16,7 +16,7 @@ With the **DiagrammeR** package, you can create diagrams and flowcharts using **
 
 The package leverages the infrastructure provided by [**htmlwidgets**](http://htmlwidgets.org) to bridge **R** and  both [**mermaid.js**](https://github.com/knsv/mermaid) and [**viz.js**](https://github.com/mdaines/viz.js/).
 
-<img src="inst/DiagrammeR_flow_diagram.png">
+![Flow Diagram](images/DiagrammeR_flow_diagram.png)
 
 ### Installation
 
@@ -271,19 +271,19 @@ Here is how the 'boxes_and_circles' graph is rendered with the **neato** engine:
 grViz(boxes_and_circles, engine = "neato")
 ```
 
-<img src="inst/Example_7c_neato.png">
+![Example_7c_neato](images/Example_7c_neato.png)
 
 ```R
 grViz(boxes_and_circles, engine = "twopi")
 ```
 
-<img src="inst/Example_7d_twopi.png">
+![Example_7d_twopi](images/Example_7d_twopi.png)
 
 ```R
 grViz(boxes_and_circles, engine = "circo")
 ```
 
-<img src="inst/Example_7e_circo.png">
+![Example_7e_circo](images/Example_7e_circo.png)
 
 #### Mixing R and Graphviz DOT
 
@@ -304,17 +304,18 @@ html("https://raw.githubusercontent.com/mdaines/viz.js/gh-pages/example.html") %
   )
 ```
 
-<img src="inst/Example_8a.png">
+![Example_8a](images/Example_8a.png)
 
-<img src="inst/Example_8b.png">
+![Example_8b](images/Example_8b.png)
 
-<img src="inst/Example_8c.png">
+![Example_8c](images/Example_8c.png)
 
-<img src="inst/Example_8d.png">
+![Example_8d](images/Example_8d.png)
 
-<img src="inst/Example_8e.png">
+![Example_8e](images/Example_8e.png)
 
-<img src="inst/Example_8f.png">
+![Example_8f](images/Example_8f.png)
+
 
 Isn't this great? Let's take in some examples straight from the Graphviz gallery:
 
@@ -369,7 +370,7 @@ mermaid(diagram)
 
 This renders the following image:
 
-<img src="inst/Example_1.png">
+![Example_1](images/Example_1.png)
 
 The same result can be achieved in a more succinct manner with this **R** statement (using semicolons between statements in the **mermaid** diagram spec):
 
@@ -379,7 +380,7 @@ mermaid("graph LR; A-->B; A-->C; C-->E; B-->D; C-->D; D-->F; E-->F")
 
 Alternatively, here is the result of using the statement `graph TB` in place of `graph LR`:
 
-<img src="inst/Example_2.png">
+![Example_2](images/Example_2.png)
 
 Keep in mind that external files can also be called by the `mermaid` function. The file `graph.mmd` can contain the text of the diagram spec as follows
 
@@ -422,7 +423,7 @@ mermaid(diagram)
 
 What you get is this:
 
-<img src="inst/Example_3.png">
+![Example_3](images/Example_3.png)
 
 Here's an example with line text (that is, text appearing on connecting lines). Simply place text between pipe characters, just after the arrow, right before the node identifier. There are few more CSS properties for the boxes included in this example (`stroke`, `stroke-width`, and `stroke-dasharray`).
 
@@ -442,7 +443,7 @@ mermaid(diagram)
 
 The resultant graphic:
 
-<img src="inst/Example_4.png">
+![Example_4](images/Example_4.png)
 
 Let's include the values of some **R** objects into a fresh diagram. The `mtcars` dataset is something I go to again and again, so, I'm going to load it up.
 
@@ -516,7 +517,7 @@ mermaid(diagram)
 
 This is part of the resulting graphic (it's quite wide so I'm displaying just 8 of the 11 columns):
 
-<img src="inst/Example_5.png">
+![Example_5](images/Example_5.png)
 
 The **mermaid.js** library also supports [sequence diagrams](http://knsv.github.io/mermaid/sequenceDiagram.html). The ["How to Draw Sequence Diagrams"](http://www.cs.uku.fi/research/publications/reports/A-2003-1/page91.pdf) report by Poranen, Makinen, and Nummenmaa offers a good introduction to sequence diagrams. Let's replicate the ticket-buying example from Figure 1 of this report and add in some conditionals.
 
@@ -542,7 +543,7 @@ sequenceDiagram
 ")
 ```
 
-<img src="inst/Example_6.png">
+![Example_6](images/Example_6.png)
 
 For more examples and additional documentation, see the [`mermaid.js` Wiki](https://github.com/knsv/mermaid/wiki).
 
